--- a/gitpod.yml
+++ b/gitpod.yml
@@ -2,7 +2,12 @@
 tasks:
   - name: Install PD CLI
     init: |
-      curl https://cli.pipedream.com/linux/amd64/latest/pd.zip && \
-      unzip pd.zip -d /usr/bin/pd
+      curl https://cli.pipedream.com/linux/amd64/latest/pd.zip --output pd.zip && \
+      unzip pd.zip -d pd && \
+      sudo mv pd/pd /usr/local/bin/ && \
+      rm -r pd && rm pid.zip
+    before: |
+      touch ~/.config/pipedream/config &&
+      echo "api_key = ${PD_API_KEY}" >> ~/.config/pipedream/config
     command: pd
 
