--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,7 +7,8 @@ tasks:
       sudo mv pd/pd /usr/local/bin/ && \
       rm -r pd && rm pd.zip
     init: |
-      val $(command gp env -e)
+      eval $(command gp env -e) &&
+      mkdir ~/.config/pipedream &&
       touch ~/.config/pipedream/config &&
       echo "api_key = ${PD_API_KEY}" >> ~/.config/pipedream/config
     command: pd
